--- a/meu-site-psicologia/src/index.css
+++ b/meu-site-psicologia/src/index.css
@@ -18,11 +18,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #d6d7f0;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #d6d7f;
 }
 
 body {
